RESOLVED FIXED209329
REGRESSION(r258741): [GTK] anchor-file-blob-download-includes-backslash.html is failing
https://bugs.webkit.org/show_bug.cgi?id=209329
Summary REGRESSION(r258741): [GTK] anchor-file-blob-download-includes-backslash.html ...
Diego Pino
Reported 2020-03-20 02:58:29 PDT
The test is failing after r258741: fast/dom/HTMLAnchorElement/anchor-file-blob-download-includes-backslash.html [ Failure ] r258741 sanitizes the output of suggested downloading file. For some reason, the sanitization doesn't take place in GTK.
Attachments
Patch (7.61 KB, patch)
2020-06-21 06:34 PDT, Carlos Garcia Campos
aperez: review+
Carlos Garcia Campos
Comment 1 2020-06-21 06:34:50 PDT
Adrian Perez
Comment 2 2020-06-22 03:20:46 PDT
By the way, this should also be tagged [WPE] — or [Soup] instead of [GTK][WPE].
Carlos Garcia Campos
Comment 3 2020-06-22 22:55:29 PDT
Note You need to log in before you can comment on or make changes to this bug.